<resources>
    <string name="app_name">Oxygen Calculator</string>
    <string name="choose_action">Choose calculator</string>
    <string name="oxy_conc">Oxygen concentration</string>
    <string name="chooser">Choose email app</string>
    <string name="enter_oxy_in_air_conc">"Enter oxygen in air concentration (by the furnace's measurer when oxygen closed, % "</string>
    <string name="enter_oxy_purity">"Enter oxy purity, % "</string>
    <string name="oxy_flow_by_default" translatable="false">3</string>
    <string name="air_flow_by_default" translatable="false">200</string>
    <string name="oxy_in_air_by_default" translatable="false">20.7</string>
    <string name="furnace_oxy_conc_by_default" translatable="false">21.8</string>
    <string name="oxy_purity_by_default" translatable="false">99.5</string>
    <string name="oxy_conc_by_default" translatable="false">22</string>
    <string name="air_flow_max" translatable="false">300</string>
    <string name="percent" translatable="false">%</string>
    <string name="decrement" translatable="false">-</string>
    <string name="increment" translatable="false">+</string>
    <string name="tkm">*1000 m3/h</string>
    <string name="warning_mes_enter_between">"Enter a value between %.1f and %.1f "</string>
    <string name="warning_mes_enter_between_air">"Enter a value between %.0f and %.0f "</string>
    <string name="warning_text">"Air loss is greater then air production. Enter a value between %.1f%% and %.1f%%"</string>
    <string name="air_flow">Blast furnace air flow</string>
    <string name="oxy_conc_dp">Oxy in blast furnace air concentration by the furnace measurer</string>
    <string name="send">send</string>
    <string name="back_to_menu">back to menu</string>
    <string name="oxy_flow">Oxygen Flow</string>
    <string name="oxy_purity">Oxygen purity</string>
    <string name="oxy_in_air">Oxygen in atmosphere concentration</string>
    <string name="air_loss">Blast Furnace Air loss</string>
    <string name="result">Result</string>
    <string name="subject">Blast Firnace Air parameters</string>
    <string name="find_oxy_flow">Calculate oxygen flow</string>
    <string name="find_oxy_conc">Calculate oxygen concentration</string>
    <string name="find_air_dissipation">Calculate air loss</string>
    <string name="enter_air_flow">Enter blast funace flow, *1000 m3/h</string>
    <string name="enter_oxyConc">Enter oxygen in blast furnace air concentration, %</string>
    <string name="to_default_button">to default</string>
    <string name="enter_oxyFlow">Enter oxy flow, *1000 m3/h</string>
    <string name="intro_detailed">There is air loss in the kompressor and thought SNORT etc. Thats why oxygen concentration calculated with air flow on the furnace seems to be larger than it is.</string>
    <string name="enter_oxyConc_furnace">Enter oxygen in blast furnace air concentration by furnace measurer, %</string>
</resources>
