<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedSolution">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--find air dissipation-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            android:src="@drawable/middle_banner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/intro_detailed"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/enter_oxyFlow"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/decrOxyFlow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="@string/decrement"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible"

                />

            <EditText
                android:id="@+id/inputOxyFlow"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            <TextView
                android:id="@+id/incrOxyFlow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="@string/increment"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

            <TextView
                android:id="@+id/toDefaultOxyFlow"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="@string/to_default_button"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />


        </LinearLayout>

        <TextView
            android:id="@+id/warning_oxyFlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/enter_air_flow"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/decrAirFlow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="@string/decrement"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

            <EditText
                android:id="@+id/inputAirFlow"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/incrAirFlow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="@string/increment"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

            <TextView
                android:id="@+id/toDefaultAirFlow"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="@string/to_default_button"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/warning_airFlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/enter_oxyConc_furnace"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/decrOxyPer"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="@string/decrement"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

            <EditText
                android:id="@+id/inputFurnaceOxyConc"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/incrOxyPer"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="@string/increment"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

            <TextView
                android:id="@+id/toDefaultOxyConc"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="@string/to_default_button"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />


        </LinearLayout>

        <TextView
            android:id="@+id/warning_oxyConc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:visibility="gone" />

        <TextView
            android:id="@+id/onCalcDissipation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="#e0e0e0"
            android:padding="16dp"
            android:text="@string/find_air_dissipation"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:visibility="visible" />

    </LinearLayout>
</ScrollView>
