<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            android:src="@drawable/intro_banner" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/enter_oxy_in_air_conc"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">


            <TextView

                android:id="@+id/decrOxyInAir"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="-"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

            <EditText
                android:id="@+id/inputOxyInAirPerc"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/incrOxyInAir"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="+"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible"

                />

            <TextView
                android:id="@+id/toDefaultOxyInAir"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="@string/to_default_button"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/warning_oxyInAir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/enter_oxy_purity"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/decrOxyPurity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="-"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

            <EditText
                android:id="@+id/inputOxyPurity"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/incrOxyPurity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="+"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

            <TextView
                android:id="@+id/toDefaultOxyPurity"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:background="#e0e0e0"
                android:padding="8dp"
                android:text="@string/to_default_button"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/warning_oxyPurity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:visibility="gone" />

        <TextView
            android:id="@+id/oxyFlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#e0e0e0"
            android:padding="16dp"
            android:text="@string/find_oxy_flow"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:visibility="visible" />

        <TextView
            android:id="@+id/oxyConc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#e0e0e0"
            android:padding="16dp"
            android:text="@string/find_oxy_conc"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:visibility="visible" />

        <TextView
            android:id="@+id/air_loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#e0e0e0"
            android:padding="16dp"
            android:text="@string/find_air_dissipation"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:visibility="visible" />
</LinearLayout>
</ScrollView>